--- a/monitoring/uss_qualifier/requirements/astm/f3548/v21.md
+++ b/monitoring/uss_qualifier/requirements/astm/f3548/v21.md
@@ -148,6 +148,11 @@ For information on these requirements, refer to [the ASTM standard F3548-21](htt
 ## Discovery and Synchronization Service
 
 * <tt>DSS0005</tt>
+  * <tt>DSS0005,1</tt>
+  * <tt>DSS0005,2</tt>
+  * <tt>DSS0005,3</tt>
+  * <tt>DSS0005,4</tt>
+  * <tt>DSS0005,5</tt>
 * <tt>DSS0010</tt>
 * <tt>DSS0015</tt>
 * <tt>DSS0020</tt>
