[uss_qualifier] split scd DSS0100 requirement into its two components

--- a/monitoring/uss_qualifier/requirements/astm/f3548/v21.md
+++ b/monitoring/uss_qualifier/requirements/astm/f3548/v21.md
@@ -156,7 +156,9 @@ For information on these requirements, refer to [the ASTM standard F3548-21](htt
 * <tt>DSS0010</tt>
 * <tt>DSS0015</tt>
 * <tt>DSS0020</tt>
-* <tt>DSS0100</tt>
+* DSS0100
+  * <tt>DSS0100,1</tt>
+  * <tt>DSS0100,2</tt>
 * <tt>DSS0200</tt>
 * <tt>DSS0205</tt>
 * <tt>DSS0210</tt>
